fix issue multiline link have gaps between lines

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -378,6 +378,10 @@ body .narrow-mainborder {
 	word-wrap:break-word;
 }
 
+.topic .words a {
+	padding: 0.25em 0;
+}
+
 .topic .words img {
 	max-width: 100%;
 }
